# edu-demo-cpp-cmake-dependency

./: CMakeLists.txt  README.md
ext/: CMakeLists.txt
src/: CMakeLists.txt  main.cpp  my_dep.cpp  my_dep.h
test/: CMakeLists.txt  my_dep_test.cpp
